Thêm icon, làm chức năng xem đọc comment rồi. còn cái thêm comment

--- a/app/src/main/res/layout/fragment_comment_item.xml
+++ b/app/src/main/res/layout/fragment_comment_item.xml
@@ -25,6 +25,7 @@
         android:id="@+id/ivCommentItemAvatar"
         android:layout_width="79dp"
         android:layout_height="90dp"
+        android:contentDescription="@string/comment_user_avatar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,10 +36,8 @@
         android:layout_width="214dp"
         android:layout_height="51dp"
         android:layout_marginStart="7dp"
-        android:ellipsize="end"
-        android:maxLines="2"
         android:nestedScrollingEnabled="true"
-        android:padding="3dp"
+        android:padding="4dp"
         android:text="@string/test_lorem_long"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
