--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cvChapterReaderEmptyCommentView">
 
         <ProgressBar
-            android:id="@+id/progressBar"
+            android:id="@+id/pbComment"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
