--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="chapter_reader_width">300dp</dimen>
-    <dimen name="chapter_reader_height">300dp</dimen>
+    <dimen name="chapter_reader_height">450dp</dimen>
+    <dimen name="book_width">150dp</dimen>
+    <dimen name="book_height">200dp</dimen>
 </resources>
